// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly when connected 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "borderRadius": 3,
        "flexDirection": "row",
      },
      null,
      null,
      undefined,
      Object {
        "backgroundColor": "transparent",
      },
    ]
  }
>
  <View
    accessible={true}
    focusable={true}
    nativeBackgroundAndroid={
      Object {
        "attribute": "selectableItemBackground",
        "type": "ThemeAttrAndroid",
      }
    }
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Array [
        Object {
          "alignItems": "center",
          "flex": 1,
          "justifyContent": "center",
        },
        Object {
          "backgroundColor": "transparent",
        },
        Object {
          "height": 50,
        },
        Object {
          "borderWidth": 0,
        },
      ]
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "flex": 1,
          "flexDirection": "row",
          "justifyContent": "space-between",
        }
      }
    >
      <Text
        style={
          Array [
            Object {
              "fontFamily": "Hind-SemiBold",
              "fontSize": 16,
            },
            Object {
              "color": "#2E3338",
            },
            Object {
              "paddingLeft": 5,
              "paddingRight": 5,
            },
          ]
        }
      >
        Celo Button
      </Text>
    </View>
  </View>
</View>
`;

exports[`renders correctly when disconnected 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "borderRadius": 3,
        "flexDirection": "row",
      },
      null,
      null,
      undefined,
      Object {
        "backgroundColor": "transparent",
      },
    ]
  }
>
  <View
    accessible={true}
    focusable={false}
    nativeBackgroundAndroid={
      Object {
        "attribute": "selectableItemBackground",
        "type": "ThemeAttrAndroid",
      }
    }
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Array [
        Object {
          "alignItems": "center",
          "flex": 1,
          "justifyContent": "center",
        },
        Object {
          "backgroundColor": "transparent",
        },
        Object {
          "height": 50,
        },
        Object {
          "borderWidth": 0,
        },
      ]
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "flex": 1,
          "flexDirection": "row",
          "justifyContent": "space-between",
        }
      }
    >
      <Text
        style={
          Array [
            Object {
              "fontFamily": "Hind-SemiBold",
              "fontSize": 16,
            },
            Object {
              "color": "color: rgba(46, 51, 56, 0.4)",
            },
            Object {
              "paddingLeft": 5,
              "paddingRight": 5,
            },
          ]
        }
      >
        Celo Button
      </Text>
    </View>
  </View>
</View>
`;
